--- a/housing-website/index.html
+++ b/housing-website/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="veiwport" content="width=device-width" />
     <title>
 
@@ -9,6 +10,7 @@
   </head>
   <body>
   
-    <script src="scripts/application.js"></script>
+    
   </body>
+  <script src="scripts/application.js"></script>
 </html>
