--- a/housing-website/index.html
+++ b/housing-website/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="veiwport" content="width=device-width" />
-    <title>
-
-    </title>
-  </head>
-  <body>
-  
-    
-  </body>
-  <script src="scripts/application.js"></script>
+<html lang = "en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>
+    Document
+  </title>
+</head>
+<body>
+</body>
+<script src="scripts/application.js">
+</script>
 </html>
