--- a/housing-website/index.html
+++ b/housing-website/index.html
@@ -3,12 +3,28 @@
   <head>
     <meta charset="utf-8" />
     <meta name="veiwport" content="width=device-width" />
+    <h1> Housing Finder</h1>
+    <p>
+      Welcome to housing finder!
+    </p>
+    <style>
+      p {
+          color: blue;
+      }
+  </style>
+    <button id="loginButton" onclick="login()">
+    Login
+    </button>
+    <button id="registerButton" onclick="register()">
+    Register
+    </button>
     <title>
+
 
     </title>
   </head>
   <body>
-  
+ 
     <script src="scripts/application.js"></script>
   </body>
 </html>
