--- a/housing-website/index.html
+++ b/housing-website/index.html
@@ -7,6 +7,7 @@
     <title>
       Website
     </title>
+    <link rel = "stylesheet" href = "styles/style.css">
   </head>
   <body>
     <script src="scripts/application.js">
