--- a/housing-website/index.html
+++ b/housing-website/index.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html lang = "en">
   <head>
-    <meta charset="utf-8" />
-    <meta name="veiwport" content="width=device-width" />
-    <h1> Housing Finder</h1>
+    <meta charset = "UTF-8">
+    <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
+    <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
+    <h1>
+      Housing Finder
+    </h1>
     <p>
-      Welcome to housing finder!
+      Welcome to Housing Finder!
     </p>
     <style>
-      p {
-          color: blue;
+      p
+      {
+        color: blue;
       }
-  </style>
-    <button id="loginButton" onclick="login()">
-    Login
+    </style>
+    <button id = "loginButton" onclick = "login()">
+      Login
     </button>
-    <button id="registerButton" onclick="register()">
-    Register
+    <button id = "registerButton" onclick = "register()">
+      Register
     </button>
     <title>
-
-
     </title>
     <link rel = "stylesheet" href = "styles/style.css">
   </head>
   <body>
- 
-    <script src="scripts/application.js"></script>
+    <script src = "scripts/application.js">
+    </script>
   </body>
 </html>
