--- a/housing-website/index.html
+++ b/housing-website/index.html
@@ -23,6 +23,7 @@
       Register
     </button>
     <title>
+      SE Project Demo 1
     </title>
     <link rel = "stylesheet" href = "styles/style.css">
   </head>
