--- a/housing-website/index.html
+++ b/housing-website/index.html
@@ -10,6 +10,20 @@
     <p>
       Welcome to Housing Finder!
     </p>
+    <script>
+      function login()
+      {
+        var username=prompt("Enter your username");
+        var password=prompt("Enter your password");
+        if(username=="Anthony" && password=="password")
+        {
+          alert("Login successful");
+        }
+        else{
+          alert("Login failed. Enter valid username or password");
+        }
+      }
+    </script>
     <style>
       p
       {
