--- a/housing-website/index.html
+++ b/housing-website/index.html
@@ -24,6 +24,11 @@
         }
       }
     </script>
+    <script> function register()
+    {
+      window.location.href='register.html';
+    }
+      </script>
     <style>
       p
       {
