Work I have gotten done so far

--- a/client/pages/login.html
+++ b/client/pages/login.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../styles/login_signup.css" >
+    <title>Log In</title>
 </head>
 <body>
+    <div id="login">
+    <h2>Log In</h2>
     <form method="POST" id="login_form">
         <label for="username">Username:</label>
         <input type="text" name="username" id="username"></input>
@@ -20,7 +23,7 @@
 
     <button type="button" id="submit_login">Log In</button>
     </form>
-
+</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="../scripts/login.js"></script>
     
